# iris

./: CMakeLists.txt  README.md  package.xml
include/iris/: arg.hpp  assert.hpp  glog.hpp  logger.hpp  severity_type.hpp  static_scope.hpp  static_scope_impl.hpp
src/: logger-printf.cpp
test/: example.cpp  example2.cpp
