<package>
  <name>iris</name>
  <version>0.1.0-pre</version>
  <description>Light, fast and generic logging frontend in modern C++.</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
